--- a/app/src/main/res/layout/new_fragment_balance.xml
+++ b/app/src/main/res/layout/new_fragment_balance.xml
@@ -36,12 +36,29 @@
             android:textColor="#f6efcc"
             android:textSize="15sp"
             tools:text="(123456,000 USD)" />
-        <TextView
-            android:id="@+id/textViewConvertBalance"
-            android:layout_marginTop="8dp"
-            android:textColor="#f6efcc"
-            style="@style/EvrazTitle"
-            tools:text="123456,000 USD" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textViewConvertBalance"
+                android:layout_marginTop="8dp"
+                android:textColor="#f6efcc"
+                style="@style/EvrazTitle"
+                tools:text="123456,000"
+                android:paddingEnd="8dp"
+                android:paddingRight="8dp"
+                android:paddingLeft="8dp"/>
+
+            <Spinner
+                android:id="@+id/spinnerConvertBalanceSign"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="#f6efcc"
+                android:visibility="visible" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
