--- a/app/src/main/res/layout/new_fragment_balance.xml
+++ b/app/src/main/res/layout/new_fragment_balance.xml
@@ -56,8 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:textColor="#f6efcc"
-                android:visibility="visible" />
+                android:textColor="#f6efcc"/>
         </LinearLayout>
     </LinearLayout>
 
