--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -18,12 +18,8 @@
         android:entryValues="@array/full_node_api_server_values"
         android:defaultValue="autoselect"/>
 
-    <android.support.v7.preference.ListPreference
+    <Preference
         android:key="quotation_currency_pair"
-        android:title="@string/quotation_cureency_select_title"
-        android:dialogTitle="@string/quotation_cureency_select_dialog_title"
-        android:entries="@array/quotation_currency_pair_options"
-        android:entryValues="@array/quotation_currency_pair_values"
-        android:defaultValue="BTS:USD"/>
+        android:title="@string/quotation_cureency_select_title" />
 
 </PreferenceScreen>
