Add keys import feature

--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -11,6 +11,10 @@
             android:icon="@mipmap/backup"
             android:title="Backup Wallet" /> -->
         <item
+            android:id="@+id/keys"
+            android:icon="@drawable/ic_key_change"
+            android:title="Show keys" />
+        <item
             android:id="@+id/about"
             android:icon="@mipmap/about"
             android:title="@string/about_activity_title" />
