--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -10,12 +10,9 @@
 
         android:defaultValue="USD"/>
 
-    <android.support.v7.preference.ListPreference
+    <Preference
         android:key="full_node_api_server"
         android:title="@string/title_full_node_api_server_select"
-        android:dialogTitle="@string/title_select_api_server"
-        android:entries="@array/full_node_api_server_values"
-        android:entryValues="@array/full_node_api_server_values"
         android:defaultValue="autoselect"/>
 
     <Preference
