Fix dialog style

--- a/app/src/main/res/layout/item_keys.xml
+++ b/app/src/main/res/layout/item_keys.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/pubTextView"
+        android:textColor="@color/table_gray_color"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -19,6 +20,7 @@
 
     <TextView
         android:id="@+id/privTextView"
+        android:textColor="@color/table_gray_color"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -35,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:tint="@color/table_gray_color"
         app:layout_constraintBottom_toBottomOf="@+id/privTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/privTextView"
@@ -45,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="23dp"
         android:layout_marginEnd="8dp"
+        android:tint="@color/table_gray_color"
         app:layout_constraintBottom_toBottomOf="@+id/pubTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/pubTextView"
