--- a/app/src/main/res/layout/item_keys_title.xml
+++ b/app/src/main/res/layout/item_keys_title.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:textColor="@color/table_gray_color"
         android:textStyle="bold"
         android:id="@+id/subtitle"
         android:layout_width="0dp"
