Fix currency spinner

--- a/app/src/main/res/layout/new_fragment_balance.xml
+++ b/app/src/main/res/layout/new_fragment_balance.xml
@@ -45,20 +45,24 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
                 android:gravity="center">
 
                 <TextView
                     android:id="@+id/textViewConvertBalance"
                     style="@style/EvrazTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     tools:text="123456,000" />
 
                 <Spinner
+                    android:background="@android:color/transparent"
                     android:id="@+id/spinnerConvertBalanceSign"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp" />
+                    android:layout_height="match_parent"
+                    tools:listitem="@layout/support_simple_spinner_dropdown_item"
+                    tools:text="USD"/>
 
             </LinearLayout>
 
