--- a/app/src/main/res/layout/new_recyclerview_item_currency_pair.xml
+++ b/app/src/main/res/layout/new_recyclerview_item_currency_pair.xml
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
+        android:visibility="gone"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="8dp"
         android:scaleType="center"
@@ -25,7 +26,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="8dp"
-        android:layout_toLeftOf="@+id/textViewPrice"
         android:layout_toRightOf="@+id/imageViewCurrency"
         android:gravity="center_vertical"
         android:text="BTC : USD"
