--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -134,6 +134,7 @@
         <TextView
             android:id="@+id/btn_donate"
             style="@style/ButtonStyle"
+            android:background="@drawable/button_background_normal_green"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_alignParentBottom="true"
