--- a/app/src/main/res/layout/new_app_bar_main.xml
+++ b/app/src/main/res/layout/new_app_bar_main.xml
@@ -45,11 +45,22 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     app:srcCompat="@mipmap/ic_more" />
+
+
             </LinearLayout>
 
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
+
+    <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/evraz"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        />
 
     <FrameLayout
         android:id="@+id/fragmentFrameLayout"
