--- a/app/src/main/res/layout/new_fragment_exchange.xml
+++ b/app/src/main/res/layout/new_fragment_exchange.xml
@@ -32,4 +32,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleExchange" />
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addServer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/ic_plus" />
+
 </android.support.constraint.ConstraintLayout>
