--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.preference.ListPreference
+    <!--<android.support.v7.preference.ListPreference
         android:key="currency_setting"
         android:title="@string/title_currency_settings"
         android:dialogTitle="@string/title_select_currency"
         android:entries="@array/bts_currency_unit_options"
         android:entryValues="@array/bts_currency_unit_values"
 
-        android:defaultValue="USD"/>
+        android:defaultValue="USD"/>-->
 
     <Preference
         android:key="full_node_api_server"
