--- a/app/src/main/res/drawable/btn_default_background.xml
+++ b/app/src/main/res/drawable/btn_default_background.xml
@@ -3,7 +3,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <corners android:radius="3dp" />
-            <solid android:color="@color/gray_color" />
+            <solid android:color="@color/gringo" />
         </shape>
     </item>
 
