--- a/app/src/main/res/layout/new_app_bar_main.xml
+++ b/app/src/main/res/layout/new_app_bar_main.xml
@@ -55,11 +55,11 @@
 
     <ImageView
         android:id="@+id/ivLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/evraz"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:src="@mipmap/new_logo"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         />
 
     <FrameLayout
