--- a/app/src/main/res/layout/new_fragment_balance.xml
+++ b/app/src/main/res/layout/new_fragment_balance.xml
@@ -9,7 +9,7 @@
         android:id="@+id/balanceContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
+        android:layout_marginBottom="90dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
@@ -46,7 +46,9 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="56dp"
+                android:layout_height="50dp"
+                android:padding="0dp"
+                style="@style/EvrazTextViewButton"
                 android:gravity="center">
 
                 <TextView
