--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -19,4 +19,10 @@
         android:key="quotation_currency_pair"
         android:title="@string/quotation_cureency_select_title" />
 
+    <Preference
+        android:key="hide"
+        android:title="@string/hide_assets"
+        android:defaultValue="null" />
+
+
 </PreferenceScreen>
