Workaround with qr-code, sharing qr, remove "open" from curencies

--- a/app/src/main/res/layout/new_activity_sign_up_button.xml
+++ b/app/src/main/res/layout/new_activity_sign_up_button.xml
@@ -10,57 +10,56 @@
         android:id="@+id/ivLogo"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        app:layout_constraintVertical_bias="0.1"
         android:src="@mipmap/new_logo"
-        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:id="@+id/ivTitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:src="@drawable/logo_evrazz"
-        android:layout_marginTop="88dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>
+        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
+        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
+        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
+        />
 
     <TextView
         android:id="@+id/buttonLogin"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/btn_default_background"
+        android:background="@drawable/bg_button"
         android:gravity="center"
         android:lineSpacingExtra="6sp"
-        android:paddingStart="32dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="32dp"
-        android:paddingBottom="4dp"
+        android:paddingBottom="9dp"
         android:text="@string/auth"
         android:textColor="@color/semi_yellow"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@id/sign_up_button"
+        android:textSize="14sp"
+        app:layout_constraintVertical_bias="0.85"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/sign_up_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="121dp"
-        android:background="@drawable/btn_default_background"
+        android:background="@drawable/bg_button"
         android:gravity="center"
         android:lineSpacingExtra="6sp"
-        android:paddingStart="32dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="32dp"
-        android:paddingBottom="4dp"
+        android:paddingBottom="9dp"
         android:text="@string/registration"
         android:textColor="@color/semi_yellow"
-        android:textSize="30sp"
+        android:textSize="14sp"
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/buttonLogin"
         app:layout_constraintStart_toStartOf="@id/buttonLogin" />
