--- a/app/src/main/res/layout/new_fragment_balance.xml
+++ b/app/src/main/res/layout/new_fragment_balance.xml
@@ -12,7 +12,7 @@
         android:layout_marginBottom="90dp"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:padding="0dp"
+                android:paddingStart="12dp"
                 style="@style/EvrazTextViewButton"
                 android:gravity="center">
 
@@ -77,12 +78,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
+        android:layout_marginBottom="90dp"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/langSwitcher"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/balanceContainer">
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/portfolio"
