Added possible to hide portfolio items; to lower case login in sign up screen.

--- a/app/src/main/res/layout/new_activity_create_account.xml
+++ b/app/src/main/res/layout/new_activity_create_account.xml
@@ -61,6 +61,7 @@
                             style="@style/EvrazEditTextStyle"
                             android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-"
                             android:gravity="center_vertical"
+                            android:textAllCaps="false"
                             android:inputType="textNoSuggestions" />
 
                         <ImageView
