--- a/app/src/main/res/layout/new_recyclerview_item_balances.xml
+++ b/app/src/main/res/layout/new_recyclerview_item_balances.xml
@@ -1,44 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewUnit"
-        style="@style/EvrazValueTableStyle"
-        tools:text="@string/assets" />
-
-    <View
-        android:layout_width="1dp"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/bottomConstraintLayout"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/beige_color" />
-
-    <TextView
-        android:id="@+id/textViewNumber"
-        style="@style/EvrazValueTableStyle"
-        tools:text="0.00000898" />
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/beige_color" />
-
-    <TextView
-        android:id="@+id/textExchangeRate"
-        style="@style/EvrazValueTableStyle"
-        tools:text="0.00000898" />
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/beige_color" />
-
-    <TextView
-        android:id="@+id/textUSDBalance"
-        style="@style/EvrazValueTableStyle"
-        tools:text="0.00000898" />
+        android:orientation="horizontal">
 
 
-</LinearLayout>
+        <View
+            android:id="@+id/unlockButtonBgView"
+            android:layout_width="103dp"
+            android:layout_height="0dp"
+            android:background="@color/black_overlay"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageView
+            android:id="@+id/ivHide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/unlockButtonBgView"
+            app:layout_constraintStart_toStartOf="@id/unlockButtonBgView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_hide" />
+
+        <View
+            android:layout_width="103dp"
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="2dp"
+            android:background="@color/grey" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textViewUnit"
+            style="@style/EvrazValueTableStyle"
+            tools:text="@string/assets" />
+
+        <TextView
+            android:id="@+id/textViewNumber"
+            style="@style/EvrazValueTableStyle"
+            tools:text="0.00000898" />
+
+        <TextView
+            android:id="@+id/textExchangeRate"
+            style="@style/EvrazValueTableStyle"
+            tools:text="0.00000898" />
+
+        <TextView
+            android:id="@+id/textUSDBalance"
+            style="@style/EvrazValueTableStyle"
+            tools:text="0.00000898" />
+
+
+    </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey" />
+
+    </LinearLayout>
+</com.daimajia.swipe.SwipeLayout>
